# pytest_training

./: .coveragerc  .gitignore  pyproject.toml  pytest_training.ipynb  setup.py
.ipynb_checkpoints/: pytest_training-checkpoint.ipynb
pytest_training/: functions.py  functions2.py
tests/: test_functions.py
