[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pytest_training"
version = "0.1.0"
description = "pytest and other tools training"
authors = ["Filip Noworolnik <fnoworolnik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
pip = "19.2.3"
toml = "^0.10.0"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37

[testenv]
whitelist_externals = poetry
commands = 
	poetry install -vvv
	poetry run pytest
"""